--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -12,7 +12,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="5dp"
             android:contentDescription="@string/man_who_is_talking"
-            android:src="@drawable/icon"
+            android:src="@drawable/avatar"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"/>
 
